--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title></title>
+    <title>Ext JS 4 Examples - loiane.com</title>
+
+    <!-- Ext JS Files -->
+    <link rel="stylesheet" type="text/css" href="extjs/resources/css/ext-all.css">
+    <script type="text/javascript" src="extjs/ext-all-debug.js"></script>
+
+    <!-- App Files -->
+    <link rel="stylesheet" type="text/css" href="resources/css/app.css">
+    <script type="text/javascript" src="app.js"></script>
+
 </head>
 <body>
-
 </body>
 </html>
